# miditation_bot

./: .gitignore  create_database.py  pyproject.toml  start.sh
src/backend/api_v1/: main.py
src/backend/api_v1/routers/: task.py  user.py
src/backend/models/: __init__.py  task.py  user.py
src/backend/schemas/: task_schema.py  user_schema.py
src/backend/services/: __init__.py  task_service.py  user_service.py
src/core/: __init__.py  config.py  database.py
src/psychologicalbot/: main.py
src/psychologicalbot/handlers/: __init__.py  registration.py  start.py  task.py
src/psychologicalbot/keyboards/: __init__.py  registration.py  tasks.py
tests/: get_users.py
